--- a/index.html
+++ b/index.html
@@ -7,195 +7,192 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kanit:wght@400;700&family=Orbitron:wght@500&family=Russo+One&family=Tektur:wght@500&display=swap" rel="stylesheet">
   <style>
     :root {
-  --deep-blue: #001a33;
-  --ocean-teal: #00c8c8;
-  --bioluminescent: #00ffea;
-  --bubble-color: rgba(255, 255, 255, 0.1);
-}
+      --deep-blue: #001a33;
+      --ocean-teal: #00c8c8;
+      --bioluminescent: #00ffea;
+      --bubble-color: rgba(255, 255, 255, 0.1);
+    }
 
-body {
-  background-color: var(--deep-blue);
-  color: var(--ocean-teal);
-  text-align: center;
-  font-family: 'Kanit', sans-serif;
-  background-image: radial-gradient(circle at center, rgba(0, 10, 30, 0.9) 0%, rgba(0, 40, 80, 0.7) 100%), url('https://source.unsplash.com/1920x1080/?deepsea,marine,abyss');
-  background-size: cover;
-  background-attachment: fixed;
-  min-height: 100vh;
-  margin: 0;
-  padding: 20px;
-  overflow: hidden;
-  position: relative;
-}
+    body {
+      background-color: var(--deep-blue);
+      color: var(--ocean-teal);
+      text-align: center;
+      font-family: 'Kanit', sans-serif;
+      background-image: radial-gradient(circle at center, rgba(0, 10, 30, 0.9) 0%, rgba(0, 40, 80, 0.7) 100%), url('https://source.unsplash.com/1920x1080/?deepsea,marine,abyss');
+      background-size: cover;
+      background-attachment: fixed;
+      min-height: 100vh;
+      margin: 0;
+      padding: 20px;
+      overflow: hidden;
+      position: relative;
+    }
 
-.bubbles {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
-  overflow: hidden;
-  z-index: 0;
-}
+    .bubbles {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      overflow: hidden;
+      z-index: 0;
+    }
 
-.bubble {
-  position: absolute;
-  bottom: -50px;
-  width: 15px;
-  height: 15px;
-  background: var(--bubble-color);
-  border-radius: 50%;
-  animation: rise 10s linear infinite;
-}
+    .bubble {
+      position: absolute;
+      bottom: -50px;
+      width: 15px;
+      height: 15px;
+      background: var(--bubble-color);
+      border-radius: 50%;
+      animation: rise 10s linear infinite;
+    }
 
-@keyframes rise {
-  0% {
-    transform: translateY(0) scale(1);
-    opacity: 1;
-  }
-  100% {
-    transform: translateY(-110vh) scale(0.5);
-    opacity: 0;
-  }
-}
+    @keyframes rise {
+      0% {
+        transform: translateY(0) scale(1);
+        opacity: 1;
+      }
+      100% {
+        transform: translateY(-110vh) scale(0.5);
+        opacity: 0;
+      }
+    }
 
-.header {
-  margin-bottom: 40px;
-  z-index: 2;
-  position: relative;
-}
+    .header {
+      margin-bottom: 40px;
+      z-index: 2;
+      position: relative;
+    }
 
-.title {
-  font-family: 'Russo One', sans-serif;
-  font-size: 4rem;
-  color: #003366;
-  text-shadow: 0 0 15px var(--bioluminescent);
-  letter-spacing: 3px;
-}
+    .title {
+      font-family: 'Russo One', sans-serif;
+      font-size: 4rem;
+      color: #003366;
+      text-shadow: 0 0 15px var(--bioluminescent);
+      letter-spacing: 3px;
+    }
 
-.question-number {
-  font-family: 'Tektur', sans-serif;
-  font-size: 1.5rem;
-  color: var(--bioluminescent);
-  margin-bottom: 5px;
-}
+    .question-number {
+      font-family: 'Tektur', sans-serif;
+      font-size: 1.5rem;
+      color: var(--bioluminescent);
+      margin-bottom: 5px;
+    }
 
-.progress-container {
-  width: 100%;
-  max-width: 500px;
-  height: 10px;
-  background: rgba(0, 191, 255, 0.2);
-  border-radius: 10px;
-  margin: 20px auto;
-}
+    .progress-container {
+      width: 100%;
+      max-width: 500px;
+      height: 10px;
+      background: rgba(0, 191, 255, 0.2);
+      border-radius: 10px;
+      margin: 20px auto;
+    }
 
-.progress-bar {
-  height: 100%;
-  background: linear-gradient(90deg, var(--ocean-teal), var(--bioluminescent));
-  width: 0%;
-  transition: width 0.5s ease;
-  border-radius: 10px;
-}
+    .progress-bar {
+      height: 100%;
+      background: linear-gradient(90deg, var(--ocean-teal), var(--bioluminescent));
+      width: 0%;
+      transition: width 0.5s ease;
+      border-radius: 10px;
+    }
 
-.container {
-  background: rgba(0, 20, 40, 0.9);
-  padding: 40px 50px;
-  border-radius: 20px;
-  width: 85%;
-  max-width: 700px;
-  margin: 0 auto;
-  box-shadow: 0 0 40px rgba(0, 200, 255, 0.4);
-  position: relative;
-  z-index: 2;
-}
+    .container {
+      background: rgba(0, 20, 40, 0.9);
+      padding: 40px 50px;
+      border-radius: 20px;
+      width: 85%;
+      max-width: 700px;
+      margin: 0 auto;
+      box-shadow: 0 0 40px rgba(0, 200, 255, 0.4);
+      position: relative;
+      z-index: 2;
+    }
 
-.question {
-  font-family: 'Orbitron', sans-serif;
-  font-size: 2rem;
-  margin-bottom: 40px;
-  min-height: 100px;
-}
+    .question {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 2rem;
+      margin-bottom: 40px;
+      min-height: 100px;
+    }
 
-.answer-box {
-  padding: 18px 30px;
-  font-size: 1.3rem;
-  background: rgba(0, 40, 80, 0.8);
-  color: white;
-  border: 2px solid var(--ocean-teal);
-  border-radius: 15px;
-  width: 80%;
-  max-width: 500px;
-  margin: 0 auto 30px;
-}
+    .answer-box {
+      padding: 18px 30px;
+      font-size: 1.3rem;
+      background: rgba(0, 40, 80, 0.8);
+      color: white;
+      border: 2px solid var(--ocean-teal);
+      border-radius: 15px;
+      width: 80%;
+      max-width: 500px;
+      margin: 0 auto 30px;
+    }
 
-.answer-box:focus {
-  outline: none;
-  border-color: var(--bioluminescent);
-  background: rgba(0, 60, 120, 0.9);
-}
+    .answer-box:focus {
+      outline: none;
+      border-color: var(--bioluminescent);
+      background: rgba(0, 60, 120, 0.9);
+    }
 
-button {
-  background: linear-gradient(to right, var(--ocean-teal), var(--bioluminescent));
-  color: var(--deep-blue);
-  padding: 18px 45px;
-  border: none;
-  border-radius: 15px;
-  font-weight: bold;
-  font-size: 1.3rem;
-  cursor: pointer;
-  font-family: 'Bebas Neue', sans-serif;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-}
+    button {
+      background: linear-gradient(to right, var(--ocean-teal), var(--bioluminescent));
+      color: var(--deep-blue);
+      padding: 18px 45px;
+      border: none;
+      border-radius: 15px;
+      font-weight: bold;
+      font-size: 1.3rem;
+      cursor: pointer;
+      font-family: 'Bebas Neue', sans-serif;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+    }
 
-.response {
-  margin-top: 30px;
-  font-size: 1.5rem;
-  font-weight: bold;
-  opacity: 0;
-  transition: opacity 0.5s ease;
-}
+    .response {
+      margin-top: 30px;
+      font-size: 1.5rem;
+      font-weight: bold;
+      opacity: 0;
+      transition: opacity 0.5s ease;
+    }
 
-.response.show {
-  opacity: 1;
-}
+    .response.show {
+      opacity: 1;
+    }
 
-.correct {
-  color: #00ff88;
-}
+    .correct {
+      color: #00ff88;
+    }
 
-.incorrect {
-  color: #ff5555;
-}
+    .incorrect {
+      color: #ff5555;
+    }
 
-.code-display {
-  font-family: 'Orbitron', sans-serif;
-  font-size: 2rem;
-  margin-top: 40px;
-  color: var(--bioluminescent);
-  padding: 20px;
-  border: 1px solid var(--ocean-teal);
-  border-radius: 10px;
-  background: rgba(0, 0, 0, 0.4);
-  display: none;
-}
+    .code-display {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 2rem;
+      margin-top: 40px;
+      color: var(--bioluminescent);
+      padding: 20px;
+      border: 1px solid var(--ocean-teal);
+      border-radius: 10px;
+      background: rgba(0, 0, 0, 0.4);
+      display: none;
+    }
 
-@media (max-width: 768px) {
-  .title {
-    font-size: 2.8rem;
-  }
+    @media (max-width: 768px) {
+      .title {
+        font-size: 2.8rem;
+      }
 
-  .question {
-    font-size: 1.6rem;
-  }
-}
-
+      .question {
+        font-size: 1.6rem;
+      }
+    }
   </style>
 </head>
 <body>
-  <!-- Bubbles for the background -->
   <div class="bubbles" id="bubbles"></div>
 
-  <!-- Header section with title and question number -->
   <div class="header">
     <div class="title">THE DEEP SEA</div>
     <div class="question-number" id="questionNum">QUESTION 1 OF 5</div>
@@ -204,7 +201,6 @@ button {
     </div>
   </div>
 
-  <!-- Quiz content section (question, input, and response) -->
   <div class="container">
     <div class="question" id="currentQuestion"></div>
     <input type="text" class="answer-box" id="answerInput" placeholder="ENTER YOUR ANSWER..." autocomplete="off">
@@ -215,57 +211,63 @@ button {
 
   <script>
     function decodeBase64(str) {
-  return decodeURIComponent(atob(str).split('').map(function(c) {
-    return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
-  }).join(''));
-}
+      return decodeURIComponent(atob(str).split('').map(function(c) {
+        return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+      }).join(''));
+    }
 
-const encodedData = "W3sicXVlc3Rpb24iOiIxIElOIDUwIE1JTExJT04sIEZST00gUkVEIFRPIFRIRSBDT0xPUiBPRiBUSEUgU0VBIiwiYW5zd2VyIjoiYmx1ZSBsb2JzdGVyIn0...";
-const decodedData = JSON.parse(decodeBase64(encodedData));
+    const encodedData = "W3sicXVlc3Rpb24iOiJXaGF0IGlzIHRoZSBsYXJnZXN0IHNwZWNpZXMgb2Ygc2hhcms/LCJ...";
+    const decodedData = JSON.parse(decodeBase64(encodedData));
 
-let currentQuestionIndex = 0;
+    let currentQuestionIndex = 0;
 
-function updateQuestion() {
-  if (currentQuestionIndex < decodedData.length) {
-    const q = decodedData[currentQuestionIndex];
-    document.getElementById("currentQuestion").textContent = q.question;
-    document.getElementById("questionNum").textContent = `QUESTION ${currentQuestionIndex + 1} OF 5`; 
-    document.getElementById("answerInput").value = ''; // Clear input box
-}
+    function updateQuestion() {
+      if (currentQuestionIndex < decodedData.length) {
+        const q = decodedData[currentQuestionIndex];
+        document.getElementById("currentQuestion").textContent = q.question;
+        document.getElementById("questionNum").textContent = `QUESTION ${currentQuestionIndex + 1} OF 5`; 
+        document.getElementById("answerInput").value = ''; // Clear input box
+        document.getElementById("response").className = "response";
+        document.getElementById("response").textContent = "";
+        document.getElementById("progressBar").style.width = `${(currentQuestionIndex / decodedData.length) * 100}%`;
+      } else {
+        document.getElementById("currentQuestion").textContent = "QUESTIONS COMPLETED!";
+        document.getElementById("questionNum").textContent = "COMPLETED";
+        document.getElementById("answerInput").style.display = "none";
+        document.querySelector("button").style.display = "none";
+        document.getElementById("progressBar").style.width = "100%";
+        document.getElementById("codeDisplay").textContent = "YOUR CODE: XK7B9M2R"; // Display code after quiz
+        document.getElementById("codeDisplay").style.display = "block";
+      }
+    }
 
-function checkAnswer() {
-  const answerInput = document.getElementById("answerInput").value.trim().toLowerCase();
-  const correctAnswer = decodedData[currentQuestionIndex].answer.toLowerCase();
-  const responseElement = document.getElementById("response");
+    function checkAnswer() {
+      const userAnswer = document.getElementById("answerInput").value.toLowerCase().trim();
+      const responseEl = document.getElementById("response");
+      const currentQ = decodedData[currentQuestionIndex];
+      let correct = false;
 
-  if (answerInput === correctAnswer) {
-    responseElement.textContent = "Correct!";
-    responseElement.classList.add("correct");
-    responseElement.classList.remove("incorrect");
-  } else {
-    responseElement.textContent = "Incorrect. Try again!";
-    responseElement.classList.add("incorrect");
-    responseElement.classList.remove("correct");
-  }
+      if (userAnswer === currentQ.answer.toLowerCase()) {
+        correct = true;
+      }
 
-  responseElement.classList.add("show");
+      if (correct) {
+        responseEl.textContent = "✓ CORRECT!";
+        responseEl.className = "response correct show";
+        currentQuestionIndex++;
+        setTimeout(updateQuestion, 1000);
+      } else {
+        responseEl.textContent = "✗ INCORRECT - TRY AGAIN";
+        responseEl.className = "response incorrect show";
+      }
+    }
 
-  // Update progress bar
-  const progress = ((currentQuestionIndex + 1) / decodedData.length) * 100;
-  document.getElementById("progressBar").style.width = `${progress}%`;
-
-  currentQuestionIndex++;
-  if (currentQuestionIndex < decodedData.length) {
-    setTimeout(updateQuestion, 2000);  // Move to the next question after 2 seconds
-  } else {
-    setTimeout(() => alert('You have completed the quiz!'), 2000);
-  }
-}
-
-window.onload = function() {
-  updateQuestion();
-};
-
+    document.addEventListener('DOMContentLoaded', function() {
+      updateQuestion();
+      document.getElementById("answerInput").addEventListener("keypress", function(e) {
+        if (e.key === "Enter") checkAnswer();
+      });
+    });
   </script>
 </body>
 </html>
