--- a/index.html
+++ b/index.html
@@ -208,14 +208,13 @@
     <div class="response" id="response"></div>
     <div class="code-display" id="codeDisplay">YOUR CODE: XK7B9M2R</div>
   </div>
-
   <script>
   const encodedData = [
     { q: "MSBJTlMgNTAgTUlMTElPTiwgRlJPTSBSRUQgVE8gVEhFIENTRUE=", a: "Ymx1ZSBsb2JzdGVy" },
     { q: "Qk9STiBGUk9NIFNUT05FLCBZRVRBTElWRSBJRyBHUk9XOyBNeSBBUk1TIEVNQlJBQ0UgQlVUIE5FVkVSIExFVCBHTw==", a: "Y29yYWw=" },
     { q: "QSBNT1VOVEFJTiBUSEFUIFdBTFBLOyBBIEZPUkVTVCBUSEFUIEhJREVTIEkgQlJFQVRIRSBUSElTSyBUTyBMSVZF", a: "d2hhbGUgc2hhcms=" },
-    { q: "SSBTSFBFQSBXSVRIT1VUIExJUFMsIEFORCBBTlNXRVIgV0lUSE9VVCBUSFJPVUdIVDsgU0FJTE9SUyBGRUFUIE1ZIFdISVNQRVIsIEZPUiBJVOKAmVMgVEhFIE9OTFkgU09VTkQgSSdWRSBDQVVHSFQ=", a: "dGhlIGJsb29w" },
-    { q: "ScKjTUEgR0lBTlQgVEhBVCBET0VTTeKAmUcgR1JPVywgwqBUUkFWRUxFUiBXSVRIIE5PIEZFRVQuIEkgQ0FOIERST1dOIFNISVBTIEJVVCBORVZFUiBEEk9OSw==", a: "YSB3YXZl" },
+    { q: "SSBTSFBFQSBXSVRIT1VUIExJUFMsIEFORCBBTlNXRVIgV0lUSE9VVCBUSFJPVUdIVDsgU0FJTE9SUyBGRUFUIE1ZIFdISVNQRVIsIEZPUiBJVOKAmVMgVEhFIE9OTFkgU09VTkQgSSdWQSBDAUg=", a: "dGhlIGJsb29w" },
+    { q: "ScKjTUEgR0lBTlQgVEhBVCBET0VTMeKAmUcgR1JPVywgwqBUUkFWRUxFUiBXSVRIIE5PIEZFRVQuIEkgQ0FOIERST1dOIFNISVBTIEJVVCBORVZFUiBEUklOSw==", a: "YSB3YXZl" },
     { q: "VEhJUyBERVFQLVNFQSBDUkVBVFVSRSBDQU4gU1RSRUNUSCBJVFMgU1RPTUFDSCBUTyBTV0FMTExPVyBQUkVZIExBUkdFUiBUSEFOIElUU0VMRg==", a: "YmxhY2sgc3dhbGxvd2Vy" },
     { q: "RVlFUyBCSVJHR0VSIFRIIEFOIFBMQVRFUyBJTlMgQSBSRUFMTSBXSVRIT1VUIFNVTiwgTVkgV1JJVEhJTkcgU0hBRE9XIE1BS0VTIFdIQUxFUyBUVVIgVE8gUlVOLTktRVQgSUdOQVQ=", a: "Z2lhbnQgc3F1aWQ=" },
     { q: "VEhJUyBERVFQLVNFQSBFTEVNSU4gTE9PS0lORyBKRUxMWUZJU0ggU0hBUkVTIElUUyBOQU1FIFdJVEggQSBGTE9BVElORyBBTElFTiBTSVBTA==", a: "Ymxvb2R5YmVsbHkgY29tYiBqZWxseQ==" }
@@ -225,7 +224,7 @@
 
   const allQuestions = encodedData.map(item => ({
     question: decode(item.q),
-    answer: decode(item.a).split("||")
+    answer: decode(item.a).includes("||") ? decode(item.a).split("||") : [decode(item.a)]
   }));
 
   const selectedQuestions = allQuestions.sort(() => 0.5 - Math.random()).slice(0, 5);
