--- a/index.html
+++ b/index.html
@@ -210,84 +210,73 @@
   </div>
 
   <script>
-  const encodedData = [
-    { q: "MSBJTlMgNTAgTUlMTElPTiwgRlJPTSBSRUQgVE8gVEhFIENTRUE=", a: "Ymx1ZSBsb2JzdGVy" },
-    { q: "Qk9STiBGUk9NIFNUT05FLCBZRVRBTElWRSBJRyBHUk9XOyBNeSBBUk1TIEVNQlJBQ0UgQlVUIE5FVkVSIExFVCBHTw==", a: "Y29yYWw=" },
-    { q: "QSBNT1VOVEFJTiBUSEFUIFdBTFBLOyBBIEZPUkVTVCBUSEFUIEhJREVTIEkgQlJFQVRIRSBUSElTSyBUTyBMSVZF", a: "d2hhbGUgc2hhcms=" },
-    { q: "SSBTSFBFQSBXSVRIT1VUIExJUFMsIEFORCBBTlNXRVIgV0lUSE9VVCBUSFJPVUdIVDsgU0FJTE9SUyBGRUFUIE1ZIFdISVNQRVIsIEZPUiBJVOKAmVMgVEhFIE9OTFkgU09VTkQgSSdWQSBDAUg=", a: "dGhlIGJsb29w" },
-    { q: "ScKjTUEgR0lBTlQgVEhBVCBET0VTMeKAmUcgR1JPVywgwqBUUkFWRUxFUiBXSVRIIE5PIEZFRVQuIEkgQ0FOIERST1dOIFNISVBTIEJVVCBORVZFUiBEUklOSw==", a: "YSB3YXZl" },
-    { q: "VEhJUyBERVFQLVNFQSBDUkVBVFVSRSBDQU4gU1RSRUNUSCBJVFMgU1RPTUFDSCBUTyBTV0FMTExPVyBQUkVZIExBUkdFUiBUSEFOIElUU0VMRg==", a: "YmxhY2sgc3dhbGxvd2Vy" },
-    { q: "RVlFUyBCSVJHR0VSIFRIIEFOIFBMQVRFUyBJTlMgQSBSRUFMTSBXSVRIT1VUIFNVTiwgTVkgV1JJVEhJTkcgU0hBRE9XIE1BS0VTIFdIQUxFUyBUVVIgVE8gUlVOLTktRVQgSUdOQVQ=", a: "Z2lhbnQgc3F1aWQ=" },
-    { q: "VEhJUyBERVFQLVNFQSBFTEVNSU4gTE9PS0lORyBKRUxMWUZJU0ggU0hBUkVTIElUUyBOQU1FIFdJVEggQSBGTE9BVElORyBBTElFTiBTSVBTA==", a: "Ymxvb2R5YmVsbHkgY29tYiBqZWxseQ==" }
-  ];
+  document.addEventListener("DOMContentLoaded", () => {
+    const encodedData = [
+      { q: "MSBJTlMgNTAgTUlMTElPTiwgRlJPTSBSRUQgVE8gVEhFIENTRUE=", a: "Ymx1ZSBsb2JzdGVy" },
+      { q: "Qk9STiBGUk9NIFNUT05FLCBZRVRBTElWRSBJRyBHUk9XOyBNeSBBUk1TIEVNQlJBQ0UgQlVUIE5FVkVSIExFVCBHTw==", a: "Y29yYWw=" },
+      { q: "QSBNT1VOVEFJTiBUSEFUIFdBTFBLOyBBIEZPUkVTVCBUSEFUIEhJREVTIEkgQlJFQVRIRSBUSElTSyBUTyBMSVZF", a: "d2hhbGUgc2hhcms=" },
+      { q: "SSBTSFBFQSBXSVRIT1VUIExJUFMsIEFORCBBTlNXRVIgV0lUSE9VVCBUSFJPVUdIVDsgU0FJTE9SUyBGRUFUIE1ZIFdISVNQRVIsIEZPUiBJVOKAmVMgVEhFIE9OTFkgU09VTkQgSSdWQSBDAUg=", a: "dGhlIGJsb29w" },
+      { q: "ScKjTUEgR0lBTlQgVEhBVCBET0VTMeKAmUcgR1JPVywgwqBUUkFWRUxFUiBXSVRIIE5PIEZFRVQuIEkgQ0FOIERST1dOIFNISVBTIEJVVCBORVZFUiBEUklOSw==", a: "YSB3YXZl" }
+    ];
 
-  const decode = str => atob(str);
+    const decode = str => atob(str);
 
-  const allQuestions = encodedData.map(item => {
-    const decodedQuestion = decode(item.q);
-    const decodedAnswer = decode(item.a);
-    return {
-      question: decodedQuestion,
-      answer: decodedAnswer.includes("||") ? decodedAnswer.split("||") : [decodedAnswer]
-    };
-  });
+    const allQuestions = encodedData.map(item => ({
+      question: decode(item.q),
+      answer: decode(item.a).split("||")
+    }));
 
-  const selectedQuestions = allQuestions.sort(() => 0.5 - Math.random()).slice(0, 5);
-  let currentQuestionIndex = 0;
+    const selectedQuestions = allQuestions.sort(() => 0.5 - Math.random()).slice(0, 5);
+    let currentQuestionIndex = 0;
 
-  function updateQuestion() {
-    if (currentQuestionIndex < selectedQuestions.length) {
-      const q = selectedQuestions[currentQuestionIndex];
-      document.getElementById("currentQuestion").textContent = q.question;
-      document.getElementById("questionNum").textContent = `QUESTION ${currentQuestionIndex + 1} OF 5`;
-      document.getElementById("answerInput").value = "";
-      document.getElementById("response").className = "response";
-      document.getElementById("response").textContent = "";
-      document.getElementById("progressBar").style.width = `${(currentQuestionIndex / selectedQuestions.length) * 100}%`;
-    } else {
-      document.getElementById("currentQuestion").textContent = "QUESTIONS COMPLETED!";
-      document.getElementById("questionNum").textContent = "COMPLETED";
-      document.getElementById("answerInput").style.display = "none";
-      document.querySelector("button").style.display = "none";
-      document.getElementById("progressBar").style.width = "100%";
-      document.getElementById("codeDisplay").style.display = "block";
+    function updateQuestion() {
+      const questionEl = document.getElementById("currentQuestion");
+      const questionNum = document.getElementById("questionNum");
+      const progress = document.getElementById("progressBar");
+      const response = document.getElementById("response");
+
+      if (currentQuestionIndex < selectedQuestions.length) {
+        const current = selectedQuestions[currentQuestionIndex];
+        questionEl.textContent = current.question;
+        questionNum.textContent = `QUESTION ${currentQuestionIndex + 1} OF ${selectedQuestions.length}`;
+        document.getElementById("answerInput").value = "";
+        response.textContent = "";
+        response.className = "response";
+        progress.style.width = `${(currentQuestionIndex / selectedQuestions.length) * 100}%`;
+      } else {
+        questionEl.textContent = "QUESTIONS COMPLETED!";
+        questionNum.textContent = "COMPLETED";
+        document.getElementById("answerInput").style.display = "none";
+        document.querySelector("button").style.display = "none";
+        progress.style.width = "100%";
+        document.getElementById("codeDisplay").style.display = "block";
+      }
     }
-  }
 
-  function checkAnswer() {
-    const userAnswer = document.getElementById("answerInput").value.toLowerCase().trim();
-    const responseEl = document.getElementById("response");
-    const currentQ = selectedQuestions[currentQuestionIndex];
-    const correct = currentQ.answer.some(ans => userAnswer === ans.toLowerCase());
+    function checkAnswer() {
+      const userAnswer = document.getElementById("answerInput").value.trim().toLowerCase();
+      const response = document.getElementById("response");
+      const currentQ = selectedQuestions[currentQuestionIndex];
+      const isCorrect = currentQ.answer.some(a => userAnswer === a.toLowerCase());
 
-    if (correct) {
-      responseEl.textContent = "✓ CORRECT!";
-      responseEl.className = "response correct show";
-      currentQuestionIndex++;
-      setTimeout(updateQuestion, 1000);
-    } else {
-      responseEl.textContent = "✗ INCORRECT - TRY AGAIN";
-      responseEl.className = "response incorrect show";
+      if (isCorrect) {
+        response.textContent = "✓ CORRECT!";
+        response.className = "response correct show";
+        currentQuestionIndex++;
+        setTimeout(updateQuestion, 1000);
+      } else {
+        response.textContent = "✗ INCORRECT - TRY AGAIN";
+        response.className = "response incorrect show";
+      }
     }
-  }
 
-  document.addEventListener('DOMContentLoaded', function () {
-    updateQuestion();
-    document.getElementById("answerInput").addEventListener("keypress", function (e) {
+    document.getElementById("answerInput").addEventListener("keypress", e => {
       if (e.key === "Enter") checkAnswer();
     });
 
-    // Bubbles
-    const bubblesContainer = document.getElementById("bubbles");
-    setInterval(() => {
-      const bubble = document.createElement("div");
-      bubble.classList.add("bubble");
-      bubble.style.left = `${Math.random() * 100}%`;
-      bubble.style.animationDuration = `${6 + Math.random() * 4}s`;
-      bubble.style.width = bubble.style.height = `${10 + Math.random() * 10}px`;
-      bubblesContainer.appendChild(bubble);
-      setTimeout(() => bubble.remove(), 10000);
-    }, 300);
+    document.querySelector("button").addEventListener("click", checkAnswer);
+
+    updateQuestion();
   });
 </script>
 </body>
