--- a/index.html
+++ b/index.html
@@ -213,24 +213,24 @@
   document.addEventListener("DOMContentLoaded", () => {
     const encodedData = [
   {
-    q: "MSBJTiA1MCBNSUxMSU9OLCBGUk9NIFJFRCBUTyBUSEUgQ09MT1IgT0YgVEhFIFNFQQ==",
+    q: "RnJvbSByZWQgdG8gYmx1ZSwgSSdtIG9uZSBpbiBtaWxsaW9ucywgc2VhLWJvcm4u",
     a: "Ymx1ZSBsb2JzdGVy"
   },
   {
-    q: "Qk9STiBGUk9NIFNUT05FLCBZRVQgQUxJVkUgSSBHUk9XOyBNWSBBUk1TIEVNQlJBQ0UgQlVUIE5FVkVSIExFVCBHTy4=",
+    q: "SSBncm93IGJ1dCBuZXZlciBtb3ZlLiBJIGxpdmUsIGJ1dCBJIGFtIHN0b25lLg==",
     a: "Y29yYWw="
   },
   {
-    q: "QSBNT1VOVEFJTiBUSEFUIFdBTEtTLCBBIEZPUkVTVCBUSEFUIEhJREVTOyBJIEJSRUFUSEUgVEhST1VHSCBNWSBUQUlMLCBBTkQgREFOQ0UgT04gVEhFIFRJREVTLg==",
+    q: "QmlnIGFzIGEgYnVzLCBzcG90cyBvbiBteSBiYWNrLCBJIGdsaWRlIGFuZCBndWxwLg==",
     a: "d2hhbGUgc2hhcms="
   },
   {
-    q: "SSBTUEVBSyBXSVRIT1VUIExJUFMsIEFORCBBTlNXRVIgV0lUSE9VVCBUSE9VR0hUOyBTQUlMT1JTIEZFQVIgTVkgV0hJU1BFUiwgRk9SIElU4oCZUyBUSEUgT05MWSBTT1VORCBJ4oCZVkUgQ0FVR0hU",
+    q: "SSB3YXMgb25jZSBhIHNvdW5kIHNvIGRlZXAsIG5vIG9uZSBrbm93cyBtZSB3ZWxsLg==",
     a: "dGhlIGJsb29w"
   },
   {
-    q: "SeKAmU0gQSBHSUFOVCBUSEFUIERPRVNO4oCZVCBHUk9XLCBBIFRSQVZFTEVSIFdJVEggTk8gRkVFVC4gSSBDQU4gRFJPV04gU0hJUFMgQlVUIE5FVkVSIERSSU5LLg==",
-    a: "d2F2ZQ=="
+    q: "SSByaXNlIGhpZ2ggd2l0aCBubyBsZWdzLCBjcmFzaCBsb3VkLCB0aGVuIGZhZGUu",
+    a: "YSB3YXZl"
   }
 ];
 
